--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,19 +2,31 @@
 	<h4>SignUp Form </h4>
 	<form (ngSubmit)="onSubmit()" #loginForm="ngForm">
 		<div class="form-group">
-			<label for="name">Name</label>
-			<input type="text" class="form-control" id="name" required pattern="[a-zA-Z][a-zA-Z ]+" [(ngModel)]="model.name" name="name" #name="ngModel">
-			<div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-				<div [hidden]="!name.hasError('required')">
+			<label for="firstname">First Name</label>
+			<input type="text" class="form-control" id="firstname" required pattern="[a-zA-Z][a-zA-Z ]+" [(ngModel)]="model.firstname" name="firstname" #firstname="ngModel">
+			<div [hidden]="firstname.valid || firstname.pristine" class="alert alert-danger">
+				<div [hidden]="!firstname.hasError('required')">
 					Name Is Required
 				</div>
-				<div [hidden]="!name.hasError('pattern')">
+				<div [hidden]="!firstname.hasError('pattern')">
 					Name Only Has Alphabets!!
 				</div>
 			</div>	
 		</div>
 		<div class="form-group">
-			<label for="name">Email Address</label>
+			<label for="firstname">Last Name</label>
+			<input type="text" class="form-control" id="lastname" required pattern="[a-zA-Z][a-zA-Z ]+" [(ngModel)]="model.lastname" name="lastname" #lastname="ngModel">
+			<div [hidden]="lastname.valid || lastname.pristine" class="alert alert-danger">
+				<div [hidden]="!lastname.hasError('required')">
+					Name Is Required
+				</div>
+				<div [hidden]="!lastname.hasError('pattern')">
+					Name Only Has Alphabets!!
+				</div>
+			</div>	
+		</div>
+		<div class="form-group">
+			<label for="firstname">Email Address</label>
 			<input type="text" class="form-control" id="emailaddress" required [(ngModel)]="model.email" name="email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" #email="ngModel">
 			<div [hidden]="email.valid || email.pristine"
             class="alert alert-danger">
@@ -27,7 +39,7 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<label for="name">Mobile Number</label>
+			<label for="firstname">Mobile Number</label>
 			<input type="text" class="form-control" id="mobilenumber" required [(ngModel)]="model.mobile"
 			name="mobilenumber" pattern="[0-9]*" minlength="10" maxlength="10" #mobile="ngModel" >
 			<div [hidden]=" mobile.valid || mobile.pristine"
@@ -45,7 +57,7 @@
 		</div>
 
 		<div class="form-group">
-			<label for="name">Password</label>
+			<label for="firstname">Password</label>
 			<input type="password" class="form-control" id="password" required [(ngModel)]="model.password" name="password" #password="ngModel">
 			<div [hidden]=" password.valid || password.pristine"
             class="alert alert-danger">
@@ -53,7 +65,7 @@
         	</div>
 		</div>
 		<div class="form-group">
-			<label for="name">Confirm Password</label>
+			<label for="firstname">Confirm Password</label>
 			<input type="password" class="form-control" id="confirmPassword"
 			required  validateEqual="password" [(ngModel)]="model.confirmPassword" name="confirmPassword" #confirmPassword="ngModel" >
 			<div [hidden]=" confirmPassword.valid || confirmPassword.pristine "
